--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,17 +5,80 @@ body {
   margin: 12px 6px;
 }
 
+.nav-icon {
+  background-color: #ccc;
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+}
+
 /* ICONS */
+.icon {
+  visibility: hidden;
+  display: block;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 14px;
+  height: 14px;
+}
+
+.btn {
+  /*background-color: #e6e6e6;*/
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 6px 20px;
+  text-align: center;
+  display: block;
+  margin: 4px;
+}
+
+.btn-active, .btn-active-grid {
+  background-color: #999;
+
+}
+
+.btn:hover {
+  background-color: #999;
+}
+
+
+.icon-grid {
+  background-position: center center;
+  background-size: 50%;
+  background-repeat: no-repeat;
+}
+
+.icon-grid-2 {
+  background-image: url(../icons/icon-grid-2.svg);
+}
+
+.icon-grid-3 {
+  background-image: url(../icons/icon-grid-3.svg);
+}
+
+.icon-grid-4 {
+  background-image: url(../icons/icon-grid-4.svg);
+}
+
+.icon-grid-5 {
+  background-image: url(../icons/icon-grid-5.svg);
+}
+
+
 
 .icon-video {
-  background-image: url(./icons/video-solid.svg);
+  background-image: url(../icons/video-solid.svg);
+}
+
+.icon-loop {
+  background-image: url(../icons/loop-solid.svg);
 }
 
 button {
-  background-color: #fff;
   border: none;
   cursor: pointer;
-  border: #0000ff 1px solid;
 }
 
 #cockpit {
@@ -24,14 +87,29 @@ button {
   justify-content: space-between;
 }
 
+.flex {
+  display: flex;
+}
+
 .logo {
-  font-size: 24px;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 30px;
   font-weight: 700;
 }
 
 a {
   text-decoration: none;
   color: #0000ff;
+}
+
+li {
+  list-style-type: none;
+  border-bottom: 1px solid #999;
+  padding: 4px 0;
+}
+
+#modal_id img {
+  width: 700px;
 }
 
 #gallery {
@@ -47,20 +125,41 @@ a {
   }
 }
 
+.gallery__item__hide {
+  display: none;
+}
+
+.gallery__item:hover {
+  /*border-color: rgba(0,0,0,0.5);*/
+  transition: border-color .3s ease-in;
+}
+
 .gallery__item:hover > .gallery__item__info {
   visibility: visible;
 }
 
+.gallery__item:hover > .gallery__item__icons {
+  visibility: visible;
+}
+
 .gallery__item__info {
+  font-weight: 700;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   color: #fff;
-  padding: 12px 8px;
+  padding: 30px 10px 10px 10px;
   visibility: hidden;
   border-radius: 0 0 3px 3px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5));
+
+}
+
+.gallery__item__icons {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
 
 .gallery__item {
@@ -73,13 +172,21 @@ a {
   border-radius: 4px;
   cursor: pointer;
   padding-bottom: 70%;
+  /*border: 3px solid #fff;*/
+}
+
+.modal__wrapper {
+  background-color: #fff;
+  margin: 0 100px;
+  padding: 50px;
 }
 
 #modal {
   margin: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #fff;
   position: absolute;
   top: 0;
   left: 0;
@@ -88,11 +195,43 @@ a {
 }
 
 #modal_close {
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+  top:0;
+  right:0;
+  position: fixed;
   cursor: pointer;
+  background-image: url(../icons/xmark-solid.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
-.fa-solid {
-  width: 50px;
-  height: 50px;
-  color: #000;
+
+
+
+
+
+.dropdown {
+  font-weight: 700;
+  position: relative;
+  display: block;
+  width: 100px;
+  padding-left: 0;
+  padding-right:0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 32px;
+  background-color: #e6e6e6;
+  width: 100px;
+  z-index: 1;
+  border-radius: 3px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
