--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,6 +85,7 @@ button {
   margin: 40px 0;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .flex {
@@ -209,7 +210,9 @@ li {
 
 
 
-
+input {
+  height: 36px;
+}
 
 
 .dropdown {
