--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -93,8 +93,15 @@ button {
 
 .logo {
   font-family: 'Roboto Mono', monospace;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 700;
+}
+
+.logo-sub {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 24px;
+  font-weight: 700;
+  color: #ccc;
 }
 
 a {
@@ -104,7 +111,6 @@ a {
 
 li {
   list-style-type: none;
-  border-bottom: 1px solid #999;
   padding: 4px 0;
 }
 
@@ -183,7 +189,7 @@ li {
 #modal {
   margin: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   background-color: #fff;
   position: absolute;
@@ -211,6 +217,9 @@ font-weight: 700;
   background-repeat: no-repeat;
 }
 
+.textbox {
+  width: 600px;
+}
 
 
 input {
