--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,10 +24,10 @@ body {
 
 .btn {
   background-color: #fff;
-  border: 2px solid #ccc;
+  border: 2px solid #fff;
   border-radius: 3px;
   cursor: pointer;
-  padding: 6px 20px;
+  padding: 4px;
   text-align: center;
   display: block;
   margin: 4px;
@@ -44,8 +44,10 @@ body {
 
 
 .icon-grid {
+  width: 30px;
+  height: 30px;
   background-position: center center;
-  background-size: 50%;
+  background-size: 74%;
   background-repeat: no-repeat;
 }
 
@@ -84,20 +86,19 @@ button {
   margin: 40px 0;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .flex {
   display: flex;
 }
 
-.logo {
+#logo {
   font-family: 'Roboto Mono', monospace;
   font-size: 24px;
   font-weight: 700;
 }
 
-.logo-sub {
+#logo-sub {
   font-family: 'Roboto Mono', monospace;
   font-size: 24px;
   font-weight: 700;
