--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,9 +2,9 @@ html,
 body {
   font-family: "IBM Plex Sans", sans-serif;
   color: #000;
+  margin: 12px 6px;
   height: 100%;
   
-  margin:0;
 }
 
 .nav-icon {
@@ -118,10 +118,14 @@ li {
 }
 
 #app__wrapper {
-  margin: 6px 12px;
+ 
 }
 
-
+.app__wrapper__fixed {
+  position: fixed;
+  left:0;
+  right:0;
+}
 
 #gallery {
   display: grid;
@@ -189,7 +193,7 @@ li {
   margin: 0;
   background-color: rgba(0, 0, 0, 0.8);
   background-color: #ccc;
-  width: 100%;
+  width: 100vw;
   min-height: 100%;
   position:absolute;
   top:0;
@@ -200,14 +204,11 @@ li {
 }
 
 #modal {
-  z-index:1000;
   padding: 60px;
-  margin: 50px 100px;
+  margin: 100px;
+  pointer-events: none;
   background-color: #fff;
   overflow-y: auto;
-  box-shadow: 1px 4px 22px 0px rgba(0,0,0,0.4);
--webkit-box-shadow: 1px 4px 22px 0px rgba(0,0,0,0.4);
--moz-box-shadow: 1px 4px 22px 0px rgba(0,0,0,0.4);
 }
 
 .modal_project_name {
