changed name from play to hive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <app-header></app-header>
 
 <div *ngIf="!this.is404" class="grid-12">
-    <div id="intro">
-        Visual logbook and digital playground, showing latest explorations in 3D.
-    </div>
+    <div id="intro">gallery playground</div>
 </div>
 <!-- use components -->
 <router-outlet></router-outlet>
